--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors" : "^2.8.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "dataloader": "^1.4.0",
